@@ -780,3 +780,10 @@
 2010-01-12
 	* libgpukernel/cal-abi.c: debug info for pt_note entries.
 
+2010-01-15
+	* libgpukernel/gpumachine.c, libgpudisasm/gpudisasm.dat: new instructions implemented.
+		Support provided for MatrixMultiplication kernel, both using global and
+		local memory.
+	* libgpukernel/gpuisa.c: Initialization of CB[0] as specified by the information provided
+		by AMD.
+
